[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ab-testing"
version = "0.1.0"
description = "Statistical A/B testing framework for experiment comparison"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
